objects/Campaign/fields/Answers__c.field-meta.xml
<CustomField>
    <fullName>Answers__c</fullName>
    <label>Answers</label>
    <length>131000</length>
    <type>Html</type>
</CustomField>