objects/Campaign/fields/Email_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Id__c</fullName>
    <label>Email Template Id</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>