objects/Campaign/fields/Questions__c.field-meta.xml
<CustomField>
    <fullName>Questions__c</fullName>
    <label>Questions</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>