objects/Campaign/fields/Synced__c.field-meta.xml
<CustomField>
    <fullName>Synced__c</fullName>
    <formula>IF(TT_Campaign_Id__c	!= null, IMAGE(&quot;/resource/TelosTouchSF__TelosTouch/images/RightCheckbox.webp&quot;,&quot;resource&quot;,25,25),
IF(TT_Campaign_Id__c == null ,IMAGE(&quot;/resource/TelosTouchSF__TelosTouch/images/CrossCheckbox1.png&quot; , &quot;resource&quot;,25,25),Null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Synced</label>
    <type>Text</type>
</CustomField>