objects/Campaign/fields/TempTTCampId__c.field-meta.xml
<CustomField>
    <fullName>TempTTCampId__c</fullName>
    <label>TempTTCampId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>