objects/Campaign/fields/TouchPoint_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>TouchPoint_Template_Id__c</fullName>
    <label>TouchPoint Template Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>