objects/Campaign/fields/TT_Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>TT_Campaign_Id__c</fullName>
    <label>TT Campaign Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>