objects/Campaign/fields/TT_Last_Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>TT_Last_Sync_Time__c</fullName>
    <label>TT Last Sync Time</label>
    <type>DateTime</type>
</CustomField>