objects/Campaign/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>TelosTouch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>email</fullName>
                <label>Email</label>
            </value>
            <value>
                <fullName>touchpoint</fullName>
                <label>Touchpoint</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>