objects/Campaign/recordTypes/Salesforce_Campaign.recordType-meta.xml
<RecordType>
    <fullName>Salesforce_Campaign</fullName>
    <active>true</active>
    <label>Salesforce</label>
</RecordType>