objects/Campaign/recordTypes/TelosTouch_Campaign.recordType-meta.xml
<RecordType>
    <fullName>TelosTouch_Campaign</fullName>
    <active>true</active>
    <label>TelosTouch</label>
</RecordType>