objects/Campaign/validationRules/Update_record_type_after_Send.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_record_type_after_Send</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISCHANGED(RecordTypeId),
				NOT(ISBLANK(TT_Campaign_Id__c))
)</errorConditionFormula>
    <errorMessage>Record type can&apos;t be updated after sending the campaign.</errorMessage>
</ValidationRule>