objects/Campaign/validationRules/Update_type_after_Send.validationRule-meta.xml
<ValidationRule>
    <fullName>Update_type_after_Send</fullName>
    <active>true</active>
    <description>Validation rule to block the update of the campaign type once it has been sent.</description>
    <errorConditionFormula>AND(
				ISCHANGED(Type__c),
				NOT(ISBLANK(TT_Campaign_Id__c))
)</errorConditionFormula>
    <errorDisplayField>Type__c</errorDisplayField>
    <errorMessage>Type can&apos;t be updated after sending the campaign.</errorMessage>
</ValidationRule>