objects/Campaign/listViews/TT_Campaigns.listView-meta.xml
<ListView>
    <fullName>TT_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.RECORDTYPE</columns>
    <columns>Synced__c</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Questions__c</columns>
    <columns>Answers__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CAMPAIGN.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Campaign.TelosTouch_Campaign</value>
    </filters>
    <label>TT Campaigns</label>
</ListView>